# AgentKit

./: .gitignore  README.md
agenthub/: build.sh  pyproject.toml
agenthub/agenthub/: __init__.py  auth.py  cli.py  config.py  demo_agent.py  gateway.py  manifest.py  models.py  runtime.py
agenthub/agenthub/stores/: __init__.py  base.py  memory.py  sqlite.py
agenthub/archive/: ni_agenthub-0.1.0-py3-none-any.whl  ni_agenthub-0.2.0-py3-none-any.whl  ni_agenthub-0.3.0-py3-none-any.whl  ni_agenthub-0.3.1-py3-none-any.whl  ni_agenthub-0.3.2-py3-none-any.whl  ni_agenthub-0.3.3-py3-none-any.whl  ni_agenthub-0.3.4-py3-none-any.whl
agenthub/docs/: Architecture.md  QuickStart.md  README.md  Reference.md  TestReport.md  agent.yaml.example
agenthub/tests/: test_acceptance_gateway.py  test_auth.py  test_manifest.py  test_stores.py
agenthub/tests/fixtures/: __init__.py  demo_agents.py
agentkit/: LICENSE  README.md  __init__.py  _cli.py  build.sh  pyproject.toml
agentkit/agents/: agent.py  base_agent.py  orchestrators.py
agentkit/archive/: agentkit-0.2.0-py3-none-any.whl  agentkit-0.3.0-py3-none-any.whl  agentkit-0.3.1-py3-none-any.whl  ni_agentkit-0.3.1-py3-none-any.whl  ni_agentkit-0.3.2-py3-none-any.whl  ni_agentkit-0.4.0-py3-none-any.whl  ni_agentkit-0.4.1-py3-none-any.whl  ni_agentkit-0.5.0-py3-none-any.whl  ni_agentkit-0.6.0-py3-none-any.whl  ni_agentkit-0.6.1-py3-none-any.whl  ni_agentkit-0.6.2-py3-none-any.whl  ni_agentkit-0.6.3-py3-none-any.whl  ni_agentkit-0.7.0-py3-none-any.whl  ni_agentkit-0.7.1-py3-none-any.whl
agentkit/docs/: Architecture.md  QuickStart.md  README.md  Reference.md  TestReport.md
agentkit/examples/: Skill.md  quickstart.py  test_ollama.py
agentkit/examples/ollama/: 01_basic_chat.py  02_tool_calling.py  03_skill_usage.py  03b_skill_tools_entry.py  04_multi_agent.py  05_guardrail.py  05_human_in_the_loop.py  06_orchestration.py  07_sync_async_stream.py  08_memory.py  08a_memory_simple_provider.py  08b_memory_mem0_provider.py  08c_memory_file_provider.py  09a_structured_data_sql.py  09b_structured_data_graph.py  09c_nebula_graph_tool.py  10_skill_lifecycle.py  11_orchestration_enhancement.py  12_run_context_serialization.py  13_human_in_the_loop.py  14_event_standardization.py  15_multi_tenant_isolation.py  16_lifecycle_hooks.py  17_checkpoint_handoff_resume.py  18_model_cosplay.py  19_hitl_deterministic.py  README.md
agentkit/examples/standard/: 01_basic_chat.py  02_tool_calling.py  03_skill_usage.py  03b_skill_tools_entry.py  04_multi_agent.py  05_guardrail.py  06_orchestration.py  07_sync_async_stream.py  08_memory.py  08a_memory_simple_provider.py  08b_memory_mem0_provider.py  08c_memory_file_provider.py  09a_structured_data_sql.py  09b_structured_data_graph.py  09c_nebula_graph_tool.py  10_skill_lifecycle.py  11_orchestration_enhancement.py  13_human_in_the_loop.py  (+7 more)
agentkit/llm/: base.py  cache.py  middleware.py  registry.py  types.py
agentkit/memory/: base.py  mem0_provider.py
agentkit/runner/: context.py  context_store.py  events.py  runner.py
agentkit/safety/: guardrails.py  permissions.py
agentkit/skills/: loader.py  models.py  registry.py
agentkit/tests/: test_after_callback.py  test_graph_repository.py  test_quickstart_core.py  test_runner_checkpoint_resume.py  test_skill_frontmatter.py
agentkit/tools/: base_tool.py  function_tool.py  nebula_tool.py  skill_toolset.py  sqlite_tool.py  structured_data.py
agentkit/utils/: schema.py
(+20 files in other folders)
